# ft_printf

./: .gitignore  CMakeLists.txt  main.c  notes
ft_printf/: ft_printf.c
ft_printf/constructors/: constructor_char.c  constructor_decimal.c  constructor_hex.c  constructor_percent.c  constructor_pointer.c  constructor_string.c  constructor_unsigned.c  constructor_zero.c
ft_printf/extra/: handle_extra.c  handle_flags.c  handle_precision.c  handle_width.c
ft_printf/middlewares/: constructor_middleware.c  print_middleware.c
ft_printf/parsers/: parse_char.c  parse_decimal.c  parse_hex.c  parse_percent.c  parse_pointer.c  parse_string.c  parse_unsigned.c
includes/: ft_printf.h  libft.h
libft/src/extra/: ft_max.c  ft_swap.c
libft/src/standard/: ft_ptoa.c
libft/src/strings/: ft_strrev.c
